--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "engines": {
-	  "node": "16.x",
-	  "npm": "7.x"
+    "node": "16.x",
+    "npm": "7.x"
   },
   "main": "index.js",
   "scripts": {
+    "build": "gulp build",
+    "watch": "gulp watch",
     "nodemon": "nodemon --watch index.js",
     "start": "node index.js",
     "test": "echo \"Test complete\""
@@ -18,7 +20,15 @@
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "fs": "^0.0.1-security",
-    "mongoose": "^6.0.11",
+    "mongoose": "^6.0.11"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.25.2",
+    "gulp": "^4.0.2",
+    "gulp-eslint": "^6.0.0",
+    "gulp-nodemon": "^2.5.0",
+    "gulp-plumber": "^1.2.1",
     "nodemon": "^2.0.14"
   }
 }
